# prismatron

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  8frame_wmma_implementation_summary.md  ADAPTIVE_FRAME_DROPPER.md  BATCH_OPTIMIZATION_ANALYSIS.md  BATCH_TRANSPOSE_DOT_PRODUCT_PLAN.md  BEATNET_INTEGRATION_PLAN.md  BLOCK_STORAGE_FIX_PLAN.md  BRIGHTNESS_CONTRAST_TEST_GUIDE.md  BUILDDROP_NOTES.md  BUILDDROP_QUICKSTART.md  CAPTURE_INVESTIGATION.md  CLAUDE.md  CNAME  CUDA_Memory_Layout_Documentation.md  EGL_DISPLAY_DEBUG_GUIDE.md  FRAME_TIMESTAMP_SPECIFICATION.md  FRAME_TIMING.md  LED_POSITION_ACCESS_GUIDE.md  LICENSE.txt  MATRIX_REFACTOR_PLAN.md  Makefile  PATTERN_FORMAT.md  PERFORMANCE_TIMING_INTEGRATION.md  PRISMATRON_IMAGE_PROPOSAL.md  README.md  SYSTEMD_SERVICE_PLAN.md  TEST_MIGRATION_PLAN.md  TRANSITIONS.md  USB_CAMERA_SSH_FIX.md  UTILITY_EXTRACTION_PLAN.md  VIDEO_CONVERSION_PLAN.md  VISUAL_EFFECTS_IMPLEMENTATION.md  WEB_INTERFACE_TESTING.md  WIFI_AP_IMPLEMENTATION_PLAN.md  WLED_NETWORK_SETUP.md  access_led_positions_demo.py  analyze_memory_access.py  (+198 more)
.github/: CODEOWNERS
archive/: cuda_kernels.py  led_optimizer_sparse.py
assets/: index-343f1d4b.js  index-40aed0ab.css  index-59c1de49.js  index-5fa3ce6c.js  index-663d0917.js  index-7234ab54.js  index-927d546a.js  index-9bbf6111.js  index-a961b748.css  index-b083095a.js  index-b285aa5c.js  index-c18ac0cf.js  index-c52e374c.css  index-e35c05e2.js  index-ea366cfe.css  index-fa72dd60.js  router-e36dd583.js  ui-489c9ae8.js  ui-7ddeb090.js  ui-8c0dd330.js  ui-a4dee4a7.js
config/: camera.json  diffusion_patterns.npz
debug/: README.md  analyze_led_brightness.py  benchmark_8frame_batch_performance.py  benchmark_batch_optimizations.py  benchmark_batch_transpose_dot_product.py  benchmark_block_storage_fix.py  compare_ata_matrices.py  compare_pattern_brightness.py  debug_ata_computation.py  debug_dense_ata.py  debug_matrix_elements.py  debug_mixed_led_values.npz  debug_optimization_difference.py  debug_optimization_flow.py  debug_web_preview.py  frame_drop_simulation.py  investigate_matrix_scaling.py  simple_matrix_analysis.py  test_ata_operations.py  test_aubio_beat_detector.py  test_audio_beat_detection_simple.py  test_batch_vs_sequential_optimizer.py  test_beat_brightness_integration.py  test_brightness_contrast.py  test_checkerboard.py  test_dia_vs_dense_optimization.py  test_frontend_rendering.py  test_integrated_beat_analyzer.py  test_kd_final_tuning.py  test_kd_tuning.py  test_ki_tuning.py  test_kp_tuning.py  test_matrix_error.py  test_pyaudio_devices.py  test_quick_208_leds.py  test_raw_matrix_equivalence.py  test_simple_batch_optimizer.py  test_v3_production.py  test_v3_uint8_kernel.py  test_visual_effects.py
docs/: NETWORK_SETUP_GUIDE.md  builddrop_detection.md  builddrop_integration.md  consumer-test-coverage-plan.md  frame-renderer-test-coverage-plan.md  frame_timing_prompt  network-ap-fallback.md  performance_analysis_summary.md  test_coverage_improvement_plan.md  trigger_framework.md
examples/: prismatron_image_demo.py  prismatron_image_simple_demo.py
experiments/: README.md
fonts/: fonts.css
playlists/: Friday_playlist.json  Love_Peace_Sauna.json  Simple_Effects.json  Uploads Playlist.json  demo_playlist.json
scripts/: 99-prismatron-ap-fallback  enable_nat_sharing.sh  extract_crash_logs.sh  install-network-support.sh  install_service.sh  migrate_to_xdg.py  network-shutdown.py  network-startup.py  prismatron-network.service  prismatron-user.service  prismatron.service  setup-dummy-display.sh  setup-headless-env.sh  setup_user_service.sh  start-dummy-display.sh  test_frame_timing.py  uninstall_service.sh  uninstall_user_service.sh  visualize_frame_timing.py  visualize_frame_timing_old.py  xorg-dummy.conf  xorg-dummy.service
src/: __init__.py  const.py  paths.py
templates/: README.md
tests/: __init__.py  conftest.py  test_8frame_correctness.py  test_audio_beat_analyzer.py  test_batch8_symmetric_wmma.py  test_batch_frame_optimizer.py  test_batch_image_optimizer.py  test_batch_symmetric_wmma.py  test_batch_transpose_dot_product.py  test_beat_pulse_effect.py  test_consumer.py  test_consumer_audio_integration.py  test_content_sources.py  test_control_state.py  test_cuda_kernels.py  test_custom_dia_kernel.py  test_dia_integration.py  test_diagonal_ata_matrix.py  test_diffusion_pattern_manager.py  test_exact_integer_correctness.py  test_fp16_wrapper_support.py  test_frame_optimizer.py  test_led_diffusion_csc_matrix.py  test_led_mapper.py  test_led_optimizer.py  test_led_optimizer_planar.py  test_optimization_regression.py  test_performance_timing.py  test_planar_output_optimization.py  test_prismatron_image.py  test_prismatron_image_standalone.py  test_producer.py  test_shared_buffer.py  test_single_block_sparse_tensor.py  test_single_block_vs_csc_performance.py  test_sparkle_effect.py  test_spatial_ordering.py  test_symmetric_dia_from_dense.py  test_symmetric_diagonal_ata_matrix.py  test_tegrastats.py  (+4 more)
tools/: README.md  __init__.py  add_ata_inverse_dia.py  analyze_1000_led_performance.py  analyze_ata_matrix.py  audio_beat_analyzer_test.py  audio_capture_test.py  batch_image_optimizer.py  benchmark_batch_optimizer.py  builddrop_detector_test.py  camera_calibration.py  capture_diffusion_patterns.py  compare_optimization_performance.py  compute_ata_inverse.py  compute_matrices.py  convert_dia_to_dense.py  convert_patterns_to_linear.py  debug_diagonal_counting.py  debug_frame_analysis.py  demo_batch_optimizer.py  enable_audio_reactive.py  generate_all_templates.sh  generate_heart_template.py  generate_ring_template.py  generate_star_template.py  generate_synthetic_patterns.py  generate_wide_ring_template.py  inspect_patterns.py  led_gain_calibrator.py  led_position_utils.py  luminance_analysis.py  matrix_performance_comparison.py  measure_optimization_timing.py  optimize_ata_to_dia.py  optimize_dia_matrix.py  optimize_template_to_leds.py  plot_audio_brightness_timeline.py  repair_dia_matrix.py  standalone_optimizer.py  usb_camera_config.py  (+4 more)
uploads/: abstract
website/: .env.example  README.md  (+5 more)
(+257 files in other folders)
